# pysparql

./: pyproject.toml
src/pysparql/: __init__.py  base.py  bind.py  clause.py  dataset.py  expression.py  filter.py  graph_pattern.py  group_by.py  order.py  prologue.py  property.py  query_form.py  slice.py  term.py  triple.py  values.py
src/pysparql/functions/: aggregate.py  base.py  datetime.py  functional_forms.py  numeric.py  rdf.py  set.py  string.py
