
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spam-eggs"
version = "2025.1.17"
dependencies = [
  "rdflib>=7.5",
  "pydantic==2.12.5",
]
requires-python = ">=3.13"
authors = [
  {name = "Paulo", email = "paulo@example.com"},
]
maintainers = [
  {name = "Paulo", email = "paulo@example.com"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["SPARQL", "bacon"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "fastapi",
]

